@@ -16,9 +16,10 @@
 
 package io.appium.java_client;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.openqa.selenium.UnsupportedCommandException;
+
+import java.util.List;
+import java.util.Map;
 
 import static io.appium.java_client.MobileCommand.hideKeyboardCommand;
 
@@ -37,8 +38,8 @@ public interface HidesKeyboardWithKeyName extends HidesKeyboard {
     default void hideKeyboard(String keyName) {
         final String extName = "mobile: hideKeyboard";
         try {
-            CommandExecutionHelper.executeScript(assertExtensionExists(extName), extName, ImmutableMap.of(
-                "keys", ImmutableList.of(keyName)
+            CommandExecutionHelper.executeScript(assertExtensionExists(extName), extName, Map.of(
+                "keys", List.of(keyName)
             ));
         } catch (UnsupportedCommandException e) {
             // TODO: Remove the fallback
