@@ -16,7 +16,6 @@
 
 package io.appium.java_client;
 
-import com.google.common.collect.ImmutableMap;
 import org.openqa.selenium.UnsupportedCommandException;
 
 import java.io.File;
@@ -24,6 +23,7 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Base64;
+import java.util.Map;
 
 import static io.appium.java_client.MobileCommand.pushFileCommand;
 
@@ -41,7 +41,7 @@ public interface PushesFiles extends ExecutesMethod, CanRememberExtensionPresenc
     default void pushFile(String remotePath, byte[] base64Data) {
         final String extName = "mobile: pushFile";
         try {
-            CommandExecutionHelper.executeScript(assertExtensionExists(extName), extName, ImmutableMap.of(
+            CommandExecutionHelper.executeScript(assertExtensionExists(extName), extName, Map.of(
                     "remotePath", remotePath,
                     "payload", new String(base64Data, StandardCharsets.UTF_8)
             ));
